add sizer for get humen-readable size and unit